feat(mcp): 添加MCP客户端实现并重组项目结构
• 新增MCP客户端模块，支持异步获取远程工具信息
• 添加t6handoffs和t7_embedding模块的初始化文件
• 重组目录结构，将plan、routing和embedding相关文件移动到新位置

BREAKING CHANGE: 多个模块文件路径变更，需更新相关导入语句

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "agentscope>=1.0.3",
+    "fastmcp>=2.12.3",
+    "loguru>=0.7.3",
+    "pymilvus[miluvs-lite]>=2.6.2",
+    "sentence-transformers>=5.1.1",
+    "twine>=6.2.0",
 ]
 
 [project.scripts]
