--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.12"
 dependencies = [
     "agentscope>=1.0.3",
     "fastmcp>=2.12.3",
+    "huggingface-hub[hf-xet]>=0.35.1",
     "loguru>=0.7.3",
     "pymilvus[miluvs-lite]>=2.6.2",
     "sentence-transformers>=5.1.1",
